millorar la presentació per impresió

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header no-print">
   <div class="header-group">
     <div class="logo"><img src="/assets/logo.png" /></div>
     <a href="/" class="header-brand">Enfortim Tiana</a>
