--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@
     </div>
     {% endif %}
     <main class="container-sm post-body">{{ content }}</main>
-    <div class="post-back"><a href="/">« Tornar</a></div>
+    <div class="post-back no-print"><a href="/">« Tornar</a></div>
     {% include footer.html %}
   </body>
 </html>
