força recarregar estils quan canvien

--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,8 +1,32 @@
-<link href="/assets/styles/variables.css" rel="stylesheet" />
-<link href="/assets/styles/index.css" rel="stylesheet" />
-<link href="/assets/styles/footer.css" rel="stylesheet" />
-<link href="/assets/styles/header.css" rel="stylesheet" />
-<link href="/assets/styles/logo.css" rel="stylesheet" />
-<link href="/assets/styles/hero.css" rel="stylesheet" />
-<link href="/assets/styles/container.css" rel="stylesheet" />
-<link href="/assets/styles/post-preview.css" rel="stylesheet" />
+<link
+  href="/assets/styles/variables.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
+<link
+  href="/assets/styles/index.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
+<link
+  href="/assets/styles/footer.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
+<link
+  href="/assets/styles/header.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
+<link
+  href="/assets/styles/logo.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
+<link
+  href="/assets/styles/hero.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
+<link
+  href="/assets/styles/container.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
+<link
+  href="/assets/styles/post-preview.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+  rel="stylesheet"
+/>
