--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -27,6 +27,10 @@
   rel="stylesheet"
 />
 <link
+        href="/assets/styles/grid.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
+        rel="stylesheet"
+/>
+<link
   href="/assets/styles/post-preview.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}"
   rel="stylesheet"
 />
